--- a/92d42786.html
+++ b/92d42786.html
@@ -79,6 +79,7 @@
 
     // 连接MQTT服务
     function ez_connect(device_id) {
+        url=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=wxf9e0c9463f5a2c2f&secret=13626dc1c6c6056a0af4446b67a7f693
         // 获取access_token
         // access_token是公众号的全局唯一票据，公众号调用各接口时都需使用access_token。
         // 正常情况下access_token有效期为7200秒，重复获取将导致上次获取的access_token失效
